# FMonad

./: FMonad.cabal  ZMonad.cabal  run.sh  xinit.sh
data/icons/: w1.xbm  w2.xbm  w3.xbm  w4.xbm  w5.xbm  w6.xbm  w7.xbm  w8.xbm  w9.xbm  wA.xbm  wB.xbm  wC.xbm  win0.xbm  win02.xbm  win1.xbm  win12.xbm
data/icons/5x11/: win0.xbm  win1.xbm  win2.xbm
src/: Main.hs
src/F/XMonad/: Config.hs  Control.hs  Layout.hs  Logger.hs  Main.hs  Manage.hs
