name:           FMonad
version:        0.0.1
cabal-version:  -any
build-type:     Simple
license:        AllRightsReserved
build-depends:  base -any, containers -any,
                dbus-core >= 0.9.2.1, haskell98 -any,
                network -any, text -any, transformers -any, 
                X11 -any, xmonad -any, xmonad-contrib -any
description:    .
author:         tux_mark_5
data-dir:       data
executable:     fmonad
main-is:        Main.hs
buildable:      True
hs-source-dirs: src
ghc-options:    -threaded
